--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>airbnb</title>
   </head>
   <body>
-    
-
+    <main>
+      <!-- milano background img -->
+      <section class="milan">
+        <div class="layover">
+          <h1>Milano</h1>
+          <h2></h2>
+        </div>
+      </section>
+      <!-- milano background img -->
+    </main>
   </body>
 </html>
