Inserimento totale di img background + testi

--- a/index.html
+++ b/index.html
@@ -8,13 +8,37 @@
   <body>
     <main>
       <!-- milano background img -->
-      <section class="milan">
-        <div class="layover">
-          <h1>Milano</h1>
-          <h2></h2>
-        </div>
-      </section>
-      <!-- milano background img -->
+        <section class="milan">
+          <div class="layover">
+            <div class="position">
+              <h1>Milano</h1>
+              <h3>Lombardia</h3>
+            </div>
+          </div>
+        </section>
+      <!-- /milano background img -->
+
+      <!-- roma background img -->
+        <section class="roma">
+          <div class="layover">
+            <div class="position">
+              <h1>Roma</h1>
+              <h3>Lazio</h3>
+            </div>
+          </div>
+        </section>
+      <!-- /roma background img -->
+
+      <!-- napoli backgroundimg -->
+        <section class="napoli">
+          <div class="layover">
+            <div class="position">
+              <h1>Napoli</h1>
+              <h3>Campania</h3>
+            </div>
+          </div>
+        </section>
+      <!-- /napoli backgroundimg -->
     </main>
   </body>
 </html>
